Dodaj testy międzyplatformowe

--- a/docs/about.tex
+++ b/docs/about.tex
@@ -544,6 +544,8 @@
 	\item[Bash] będący bardzo popularnym językiem skryptowym nadaje się do automatyzacji pracy i uruchamiania wielu programów w kontrolowany i prosty sposób.
 	Uniwersalne narzędzie pomagające w wielu miejscach.
 	\item[Git] jest narzędziem kontroli wersji, używanym przy bardzo wielu projektach informatycznych. Pozwala na łatwe umieszczenie kodu w usłudze GitHub.
+	\item[Gnuplot] służy do generowania wykresów z danych, zapisanych w pliku tekstowym.
+	\item[Dia] to graficzny edytor do tworzenia diagramów UML.
 	\item[Virtualbox/Qemu] do ewentualnej wirtualizacji systemu operacyjnego z ROS, lub uruchomienie osobnego systemu z dysku zewnętrznego.
 	\end{description}
 
