Dodaj testy enkoderów

--- a/docs/components.tex
+++ b/docs/components.tex
@@ -342,6 +342,11 @@ Komponenty modeli platform i czujnika laserowego, zostały opisane szczegółowo
 		Pozwala to na przykład umieścić znacznik platformy i chmury punktów odebranych z czujników laserowych.
 		Jest lżejszy na zasobach w działaniu niż Gazebo i pokazuje tylko informacje z odebranych danych, a nie całe środowisko symulacji.
 		
+	\subsection{Zbieranie danych}
+		Każdy \texttt{topic} może zostać zapisany do pliku, a następnie odtworzony w ten sam sposób.
+		Wbudowane w ROSa narzędzie \texttt{rosbag} pozwala ,,nagrać'' i odtworzyć dane dokładnie w taki sam sposób, w jaki zostały odebrane.
+		Zapisuje to w formie pliku binarnego, wraz z dokładnymi parametrami działania nadajnika wiadomości.
+		Możliwe jest również wydrukowanie danych do pliku tekstowego, aby mógł być wykorzystany przez inne programy jak Gnuplot, Calc (Exel), czy Matlab.
 		
 	
 	
