--- a/docs/main.tex
+++ b/docs/main.tex
@@ -5,6 +5,7 @@
 \usepackage{polski}
 \usepackage{graphicx}
 \usepackage{amsmath}
+\usepackage{nameref}
 \usepackage{wrapfig}
 \usepackage{hyperref}
 \usepackage{gensymb}
@@ -26,8 +27,9 @@
 \tableofcontents
 
 \input{about.tex}
+\input{tools.tex}
+\input{robot.tex}
 \input{model.tex}
-\input{sensor.tex}
 \input{components.tex}
 \input{tests.tex}
 \input{bibliography.tex}
