--- a/docs/tests.tex
+++ b/docs/tests.tex
@@ -1,4 +1,5 @@
 \chapter{Testy systemu}
+\label{sec:tests}
 W tym rozdziale przedstawione są różne konfiguracje pakietów, wraz z wykresami ruchów platform, oraz wnioski płynące z tych zachowań.
 Każdy test wymaga innego podłączenia komponentów do siebie nawzajem.
 
