Opisz czujnik inercji

--- a/docs/bibliography.tex
+++ b/docs/bibliography.tex
@@ -76,6 +76,10 @@ Strona internetowa standardu SDF. \\
 Strona internetowa producenta czujników laserowych SICK. \\
 \url{https://www.sick.com/de/en/detection-and-ranging-solutions/2d-lidar-sensors/lms1xx/lms100-10000/p/p109841}
 
+\bibitem{adis_website}
+Strona internetowa producenta czujnika inercji. \\
+\url{https://www.digikey.com/product-detail/en/analog-devices-inc/ADIS16460AMLZ/ADIS16460AMLZ-ND/5957823}
+
 \bibitem{ode_contact}
 Dokumentacja maszyny ODE z wyjaśnieniem działania kolizji. \\
 \url{http://ode-wiki.org/wiki/index.php?title=Manual:_Joint_Types_and_Functions#Contact}
